@@ -48,6 +48,7 @@ struct CongEditorNodeTextDetails
 #endif
 	
 	gulong handler_id_node_set_text;
+	gulong handler_id_selection_change;
 
 	PangoLayout *pango_layout;
 	GList *list_of_text_fragments;
@@ -68,7 +69,7 @@ generate_line_areas_recursive (CongEditorNode *editor_node,
 			       gint initial_indent);
 
 static enum CongFlowType
-get_flow_type(CongEditorNode *editor_node);
+get_flow_type (CongEditorNode *editor_node);
 
 /* FIXME:  We probably shouldn't have every text node in the doc listening to every text node change... probably should allow for a dispatch mechanism within the widget */
 /* Declarations of the CongDocument event handlers: */
@@ -77,6 +78,10 @@ on_signal_set_text_notify_after (CongDocument *doc,
 				 CongNodePtr node, 
 				 const xmlChar *new_content, 
 				 gpointer user_data);
+
+static void 
+on_signal_selection_change_notify_after (CongDocument *doc, 
+					 gpointer user_data);
 
 /* Declarations of the CongEditorArea event handlers for the block area: */
 static gboolean
@@ -87,6 +92,14 @@ static gboolean
 on_signal_motion_notify (CongEditorArea *editor_area, 
 			 GdkEventMotion *event,
 			 gpointer user_data);
+
+/* Internal utilities: */
+const gchar*
+get_text_cache_input (CongEditorNodeText *editor_node_text);
+
+gchar*
+generate_markup (CongEditorNodeText *editor_node_text);
+
 
 /* Exported function definitions: */
 GNOME_CLASS_BOILERPLATE(CongEditorNodeText, 
@@ -130,24 +143,34 @@ cong_editor_node_text_construct (CongEditorNodeText *editor_node_text,
 				 CongEditorWidget3* editor_widget,
 				 CongNodePtr node)
 {
+	gchar *markup;
+
 	cong_editor_node_construct (CONG_EDITOR_NODE (editor_node_text),
 				    editor_widget,
 				    node);
 
 	PRIVATE(editor_node_text)->text_cache = cong_text_cache_new (TRUE,
-								     node->content);
+								     get_text_cache_input (editor_node_text));
 
 	PRIVATE(editor_node_text)->handler_id_node_set_text = g_signal_connect_after (G_OBJECT(cong_editor_widget3_get_document(editor_widget)), 
 										      "node_set_text",
 										      G_CALLBACK(on_signal_set_text_notify_after),
 										      editor_node_text);
 
+	PRIVATE(editor_node_text)->handler_id_selection_change = g_signal_connect_after (G_OBJECT(cong_editor_widget3_get_document(editor_widget)), 
+											 "selection_change",
+											 G_CALLBACK(on_signal_selection_change_notify_after),
+											 editor_node_text);
+
 	/* Set up our Pango Layout: */
 	PRIVATE(editor_node_text)->pango_layout = pango_layout_new(gtk_widget_get_pango_context (GTK_WIDGET(editor_widget)));
+	
+	markup = generate_markup (editor_node_text);
 
-	pango_layout_set_text (PRIVATE(editor_node_text)->pango_layout,
-			       cong_text_cache_get_text (PRIVATE(editor_node_text)->text_cache),
-			       -1);
+	pango_layout_set_markup (PRIVATE(editor_node_text)->pango_layout,
+				 markup,
+				 -1);
+	g_free (markup);
 
 	pango_layout_set_font_description (PRIVATE(editor_node_text)->pango_layout,
 					   cong_font_get_pango_description(cong_app_singleton()->fonts[CONG_FONT_ROLE_BODY_TEXT]));
@@ -162,6 +185,8 @@ dispose (GObject *object)
 
 	g_signal_handler_disconnect (G_OBJECT(cong_editor_node_get_document(CONG_EDITOR_NODE(object))),
 				     PRIVATE(editor_node_text)->handler_id_node_set_text);	
+	g_signal_handler_disconnect (G_OBJECT(cong_editor_node_get_document(CONG_EDITOR_NODE(object))),
+				     PRIVATE(editor_node_text)->handler_id_selection_change);	
 
 	GNOME_CALL_PARENT (G_OBJECT_CLASS, dispose, (object));
 }
@@ -223,6 +248,51 @@ generate_block_area (CongEditorNode *editor_node)
 	
 }
 
+gboolean
+cong_selection_get_start_byte_offset (CongSelection *selection, 
+				      CongNodePtr node,
+				      gint *output);
+gboolean
+cong_selection_get_end_byte_offset (CongSelection *selection, 
+				      CongNodePtr node,
+				      gint *output);
+gboolean
+cong_selection_get_start_byte_offset (CongSelection *selection, 
+				      CongNodePtr node,
+				      gint *output)
+{
+	if (NULL==selection->loc0.node) {
+		return FALSE;
+	}
+
+	if (selection->loc0.node == node) {
+		*output = selection->loc0.byte_offset;
+		return TRUE;
+
+	} else {
+		return FALSE; /* for now */ 
+	}
+
+}
+gboolean
+cong_selection_get_end_byte_offset (CongSelection *selection, 
+				    CongNodePtr node,
+				      gint *output)
+{
+	if (NULL==selection->loc1.node) {
+		return FALSE;
+	}
+
+	if (selection->loc1.node == node) {
+		*output = selection->loc1.byte_offset;
+		return TRUE;
+
+	} else {
+		return FALSE; /* for now */ 
+	}
+
+}
+
 static CongEditorLineFragments*
 generate_line_areas_recursive (CongEditorNode *editor_node,
 			       gint line_width,
@@ -231,7 +301,7 @@ generate_line_areas_recursive (CongEditorNode *editor_node,
 	CongEditorLineFragments *result;
 	CongEditorNodeText *node_text = CONG_EDITOR_NODE_TEXT(editor_node);
 
-#if 1
+#if 0
 	g_message("CongEditorNodeText::generate_line_areas_recursive, cached text =\"%s\"", 
 		  cong_text_cache_get_text (PRIVATE(node_text)->text_cache));
 #endif
@@ -249,32 +319,35 @@ generate_line_areas_recursive (CongEditorNode *editor_node,
 	/* Add areas for the PangoLayoutLines: */
 	{
 		GSList* iter;
+		int index;
+		PangoLayoutIter* layout_iter = pango_layout_get_iter (PRIVATE(node_text)->pango_layout);
+
 
 		/* CAUTION: this is internal data of the PangoLayout */
-		for (iter= pango_layout_get_lines (PRIVATE(node_text)->pango_layout); iter; iter=iter->next) {
-			PangoLayoutLine *line = iter->data;
+		for (index=0; index<pango_layout_get_line_count(PRIVATE(node_text)->pango_layout); index++, pango_layout_iter_next_line(layout_iter)) {
+			PangoLayoutLine *line = pango_layout_iter_get_line (layout_iter);
 			gchar *line_text;
+			CongEditorArea *text_fragment;
 			PangoRectangle ink_rect;
 			PangoRectangle logical_rect;
-			CongEditorArea *text_fragment;
-
+			
 			g_assert(line);
-
-			line_text = cong_eel_pango_layout_line_get_text (line);
 
 			pango_layout_line_get_pixel_extents (line,
 							     &ink_rect,
 							     &logical_rect);
 
+#if 0
+			g_message("baseline = %i, logical rect.y = %i",
+				  (pango_layout_iter_get_baseline(layout_iter)/PANGO_SCALE),
+				  logical_rect.y);
+#endif
+
 			text_fragment = cong_editor_area_text_fragment_new (cong_editor_node_get_widget (editor_node),
-									    cong_app_singleton()->fonts[CONG_FONT_ROLE_BODY_TEXT],
-									    NULL,
-									    line_text,
-									    FALSE,
-									    logical_rect.width,
-									    logical_rect.height,
-									    line->start_index);
-			g_free (line_text);
+									    PRIVATE(node_text)->pango_layout,
+									    index,
+									    - logical_rect.y);
+			/* FIXME: the calculation of how to offset each baseline is a hack, and might break */
 
 			g_signal_connect (text_fragment,
 					  "button_press_event",
@@ -298,6 +371,9 @@ generate_line_areas_recursive (CongEditorNode *editor_node,
 
 
 		}
+
+		pango_layout_iter_free (layout_iter);
+			     
 	}
 #else
 	{
@@ -331,12 +407,18 @@ on_signal_set_text_notify_after (CongDocument *doc,
 	/* FIXME: need smarter dispatch mechanism: */
 	if (node == cong_editor_node_get_node( CONG_EDITOR_NODE(editor_node_text))) {
 
+		gchar *markup;
+	
 		cong_text_cache_set_text (PRIVATE(editor_node_text)->text_cache,
-					  cong_editor_node_get_node (CONG_EDITOR_NODE(editor_node_text))->content);
+					  get_text_cache_input (editor_node_text));
 
-		pango_layout_set_text (PRIVATE(editor_node_text)->pango_layout,
-				       cong_text_cache_get_text (PRIVATE(editor_node_text)->text_cache),
-				       -1);
+		markup = generate_markup (editor_node_text);
+
+		pango_layout_set_markup (PRIVATE(editor_node_text)->pango_layout,
+					 markup,
+					 -1);
+
+		g_free (markup);
 
 		cong_editor_node_line_regeneration_required (CONG_EDITOR_NODE(editor_node_text));
 
@@ -347,6 +429,26 @@ on_signal_set_text_notify_after (CongDocument *doc,
 		}
 #endif
 	}
+}
+
+static void 
+on_signal_selection_change_notify_after (CongDocument *doc, 
+					 gpointer user_data)
+{
+	CongEditorNodeText *editor_node_text = (CongEditorNodeText*)user_data;
+	gchar *markup;
+	
+	g_return_if_fail (IS_CONG_EDITOR_NODE_TEXT(editor_node_text));
+
+	markup = generate_markup (editor_node_text);
+	
+	pango_layout_set_markup (PRIVATE(editor_node_text)->pango_layout,
+				 markup,
+				 -1);
+	
+	g_free (markup);
+
+	cong_editor_node_line_regeneration_required (CONG_EDITOR_NODE(editor_node_text));
 }
 
 static gboolean 
@@ -361,19 +463,19 @@ get_location_at_xy(CongEditorNodeText *editor_node_text,
 	g_return_val_if_fail(result, FALSE);
 	g_return_val_if_fail(editor_area_text_fragment, FALSE);
 
-
-	if (cong_editor_area_text_xy_to_index (CONG_EDITOR_AREA_TEXT(editor_area_text_fragment),
-					       x,
-					       y,
-					       &index_,
-					       &trailing)) {
+	if (cong_editor_area_text_fragment_x_to_index (CONG_EDITOR_AREA_TEXT_FRAGMENT(editor_area_text_fragment),
+						       x,
+						       &index_,
+						       &trailing)) {
 		int original_byte_offset;
 
-#if 0
+#if 1
 		g_message("(%i,%i) -> index %i", x,y, index_);
 #endif
 
+#if 0
 		index_ += cong_editor_area_text_fragment_get_text_offset (editor_area_text_fragment);
+#endif
 
 		if ( cong_text_cache_convert_stripped_byte_offset_to_original (PRIVATE(editor_node_text)->text_cache,
 									       index_,
@@ -532,4 +634,149 @@ static enum CongFlowType
 get_flow_type(CongEditorNode *editor_node)
 {
 	return CONG_FLOW_TYPE_INLINE;
+}
+
+/* Internal utilities: */
+const gchar*
+get_text_cache_input (CongEditorNodeText *editor_node_text)
+{
+	return cong_editor_node_get_node (CONG_EDITOR_NODE(editor_node_text))->content;
+}
+
+gboolean
+cong_selection_is_valid (CongSelection *selection)
+{
+	g_return_val_if_fail (selection, FALSE);
+
+	if (selection->loc0.node) {
+		if (selection->loc1.node) {
+			return (selection->loc0.node->parent == selection->loc1.node->parent);
+		}
+	}
+	
+	return FALSE;
+}
+
+gchar*
+generate_markup (CongEditorNodeText *editor_node_text)
+{
+	gchar *result_markup;
+	CongNodePtr this_node;
+	const gchar *stripped_text;
+	CongSelection *selection;
+	gint selection_start_original;
+	gint selection_end_original;
+	gint selection_start_stripped;
+	gint selection_end_stripped;
+	gboolean got_selection_start;
+	gboolean got_selection_end;
+	
+	g_return_val_if_fail (editor_node_text, NULL);
+
+	this_node = cong_editor_node_get_node (CONG_EDITOR_NODE(editor_node_text));
+	selection = cong_document_get_selection (cong_editor_node_get_document (CONG_EDITOR_NODE(editor_node_text)));
+	stripped_text = cong_text_cache_get_text (PRIVATE(editor_node_text)->text_cache),
+
+	/* See if we have any selections starting or ending in this node: */
+	got_selection_start = cong_selection_get_start_byte_offset (selection, 
+								    this_node, 
+								    &selection_start_original);
+	got_selection_end = cong_selection_get_end_byte_offset (selection, 
+								this_node, 
+								&selection_end_original);
+
+	if (got_selection_start) {
+		got_selection_start = cong_text_cache_convert_original_byte_offset_to_stripped (PRIVATE(editor_node_text)->text_cache,
+												selection_start_original,
+												&selection_start_stripped);
+
+	}
+	if (got_selection_end) {
+		got_selection_end = cong_text_cache_convert_original_byte_offset_to_stripped (PRIVATE(editor_node_text)->text_cache,
+											      selection_end_original,
+											      &selection_end_stripped);
+	}
+
+	{
+		/* FIXME: get these from theme! */
+		/* FIXME: also ought to do something about invalid selections... */
+		const gchar *fg_col_selection;
+		const gchar *bg_col_selection;
+		const gchar *fg_col_normal = "black";
+		const gchar *bg_col_normal = "white";
+		
+		gchar *before_selection = NULL;
+		gchar *within_selection = NULL;
+		gchar *after_selection = NULL;
+
+		if (cong_selection_is_valid (selection)) {
+			fg_col_selection = "white";
+			bg_col_selection = "black";
+		} else {
+			fg_col_selection = "white";
+			bg_col_selection = "red";
+		}
+		
+		if (got_selection_start) {
+
+			before_selection = g_strndup (stripped_text, selection_start_stripped);
+
+			if (got_selection_end) {
+				
+				g_assert (selection_start_stripped<=selection_end_stripped);
+
+				/* we've got a self-contained selection within this node, or one that entirely encloses it: */
+				within_selection = g_strndup (stripped_text + selection_start_stripped, selection_end_stripped - selection_start_stripped);
+				after_selection =  g_strdup (stripped_text + selection_end_stripped);
+			} else {
+				/* we've got a selection that starts in this node but carries on past the end: */
+				within_selection = g_strdup (stripped_text + selection_start_stripped);
+				after_selection =  g_strdup ("");
+				
+			}
+		} else {
+			before_selection = g_strdup ("");
+
+			if (got_selection_end) {
+				/* we've got a selection that starts before this node and carries on past the end: */
+				within_selection = g_strndup (stripped_text,  selection_end_stripped);
+				after_selection = g_strdup (stripped_text + selection_end_stripped);
+			} else {
+				/* no selections present: */
+				within_selection =  g_strdup ("");
+				after_selection =  g_strdup (stripped_text);
+			}
+		}
+		
+		g_assert(before_selection);
+		g_assert(within_selection);
+		g_assert(after_selection);
+		
+		/* We now escape these three strings and use them to generate the resulting markup: */
+		{
+			gchar *before_selection_escaped = g_markup_escape_text (before_selection,
+										strlen(before_selection));
+			gchar *within_selection_escaped = g_markup_escape_text (within_selection,
+										strlen(within_selection));
+			gchar *after_selection_escaped = g_markup_escape_text (after_selection,
+										strlen(after_selection));
+			
+			result_markup = g_strdup_printf ("<span background=\"%s\" foreground=\"%s\">%s</span>"
+							 "<span background=\"%s\" foreground=\"%s\">%s</span>"
+							 "<span background=\"%s\" foreground=\"%s\">%s</span>", 
+							 bg_col_normal, fg_col_normal, before_selection_escaped,
+							 bg_col_selection, fg_col_selection, within_selection_escaped,
+							 bg_col_normal, fg_col_normal, after_selection_escaped);
+			
+			g_free (before_selection_escaped);
+			g_free (within_selection_escaped);
+			g_free (after_selection_escaped);
+		}
+		
+		g_free (before_selection);
+		g_free (within_selection);
+		g_free (after_selection);
+	}
+
+	return result_markup;
 }
